Closed
Bug 1701344
Opened 4 years ago
Closed 4 years ago
change diagnostic assert in GetClipWithRespectToASR back to a debug assert
Categories
(Core :: Web Painting, defect)
Core
Web Painting
Tracking
()
RESOLVED
FIXED
89 Branch
Tracking | Status | |
---|---|---|
firefox-esr78 | --- | unaffected |
firefox87 | --- | unaffected |
firefox88 | --- | unaffected |
firefox89 | --- | fixed |
People
(Reporter: tnikkel, Assigned: tnikkel)
References
(Regression)
Details
(Keywords: regression)
Crash Data
Attachments
(1 file)
We're hitting this assert often, it's already our top 3 in crashes in the last day and it's only been landed for part of a day.
Assignee | ||
Comment 1•4 years ago
|
||
In bug 1700812 we made this a diagnostic assert to try to get a better handle on it, and the potential crashes it could cause later inside webrender, but we are hitting it too often. That should be enough data on this specific assert.
Updated•4 years ago
|
Assignee: nobody → tnikkel
Status: NEW → ASSIGNED
Pushed by tnikkel@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/6af343f10c00
Change diagnostic assert in GetClipWithRespectToASR back to a debug assert. r=mstange
Updated•4 years ago
|
Crash Signature: [@ nsDisplayList::GetClippedBoundsWithRespectToASR]
![]() |
||
Comment 4•4 years ago
|
||
bugherder |
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
status-firefox89:
--- → fixed
Resolution: --- → FIXED
Target Milestone: --- → 89 Branch
Updated•4 years ago
|
Keywords: regression
Comment 5•4 years ago
|
||
Set release status flags based on info from the regressing bug 1700812
status-firefox87:
--- → unaffected
status-firefox88:
--- → unaffected
status-firefox-esr78:
--- → unaffected
Updated•4 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•